<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_mail"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/email" />
        <item
            android:id="@+id/menu_alert"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/alerts" />
        <item
            android:id="@+id/menu_info"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/information" />
    </group>

    <item android:title="Otras opciones">
        <menu>
            <item
                android:id="@+id/menu_option_1"
                android:icon="@android:drawable/ic_dialog_dialer"
                android:title="@string/option_1" />
            <item
                android:id="@+id/menu_option_2"
                android:icon="@android:drawable/ic_dialog_dialer"
                android:title="@string/option_2" />
        </menu>
    </item>

</menu>